Fix shade build and benchmarks